--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-is-dev": "^1.1.0",
     "electron-reload": "^1.5.0",
     "express": "^4.16.4",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-chartjs": "^1.2.0",
     "react-diff-viewer": "^1.1.0",
@@ -43,6 +44,7 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.3.1",
+    "styled-react-modal": "^2.0.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
