--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-diff-viewer": "^1.1.0",
     "react-dom": "^16.8.6",
     "react-feather": "^1.1.6",
+    "react-icons": "^3.7.0",
     "react-json-view": "latest",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
