--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "css-loader": "^2.1.1",
+    "electron-devtools-installer": "^2.2.4",
     "electron-packager": "^14.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
